; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_der_encode_length.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asn1_encode_test.c_der_encode_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i8**)* @der_encode_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @der_encode_length(i64 %0, i8** %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ult i64 %6, 32768
  %8 = zext i1 %7 to i32
  %9 = call i32 @OPENSSL_assert(i32 %8)
  %10 = load i64, i64* %3, align 8
  %11 = icmp ugt i64 %10, 255
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i64 3, i64* %5, align 8
  br label %19

13:                                               ; preds = %2
  %14 = load i64, i64* %3, align 8
  %15 = icmp ugt i64 %14, 127
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i64 2, i64* %5, align 8
  br label %18

17:                                               ; preds = %13
  store i64 1, i64* %5, align 8
  br label %18

18:                                               ; preds = %17, %16
  br label %19

19:                                               ; preds = %18, %12
  %20 = load i8**, i8*** %4, align 8
  %21 = icmp ne i8** %20, null
  br i1 %21, label %22, label %62

22:                                               ; preds = %19
  %23 = load i64, i64* %5, align 8
  %24 = icmp eq i64 %23, 1
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load i64, i64* %3, align 8
  %27 = trunc i64 %26 to i8
  %28 = load i8**, i8*** %4, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = getelementptr inbounds i8, i8* %29, i32 1
  store i8* %30, i8** %28, align 8
  store i8 %27, i8* %29, align 1
  br label %61

31:                                               ; preds = %22
  %32 = load i64, i64* %5, align 8
  %33 = sub i64 %32, 1
  %34 = trunc i64 %33 to i8
  %35 = load i8**, i8*** %4, align 8
  %36 = load i8*, i8** %35, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %35, align 8
  store i8 %34, i8* %36, align 1
  %38 = load i64, i64* %5, align 8
  %39 = icmp eq i64 %38, 2
  br i1 %39, label %40, label %47

40:                                               ; preds = %31
  %41 = load i64, i64* %3, align 8
  %42 = or i64 128, %41
  %43 = trunc i64 %42 to i8
  %44 = load i8**, i8*** %4, align 8
  %45 = load i8*, i8** %44, align 8
  %46 = getelementptr inbounds i8, i8* %45, i32 1
  store i8* %46, i8** %44, align 8
  store i8 %43, i8* %45, align 1
  br label %60

47:                                               ; preds = %31
  %48 = load i64, i64* %3, align 8
  %49 = lshr i64 %48, 8
  %50 = or i64 128, %49
  %51 = trunc i64 %50 to i8
  %52 = load i8**, i8*** %4, align 8
  %53 = load i8*, i8** %52, align 8
  %54 = getelementptr inbounds i8, i8* %53, i32 1
  store i8* %54, i8** %52, align 8
  store i8 %51, i8* %53, align 1
  %55 = load i64, i64* %3, align 8
  %56 = trunc i64 %55 to i8
  %57 = load i8**, i8*** %4, align 8
  %58 = load i8*, i8** %57, align 8
  %59 = getelementptr inbounds i8, i8* %58, i32 1
  store i8* %59, i8** %57, align 8
  store i8 %56, i8* %58, align 1
  br label %60

60:                                               ; preds = %47, %40
  br label %61

61:                                               ; preds = %60, %25
  br label %62

62:                                               ; preds = %61, %19
  %63 = load i64, i64* %5, align 8
  ret i64 %63
}

declare dso_local i32 @OPENSSL_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
